# miniRT

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirement.md  task.md  test.ppm  test1.ppm  test2.ppm  test3.ppm  test4.ppm  test5.ppm  test6.ppm
include/: aabb.h  addend.h  args.h  camera.h  color.h  ft_dotrt.h  ft_error.h  ft_readrt.h  hittable.h  key_linux.h  macro.h  minirt.h  ray.h  valid.h  vector.h
libft/include/: from_ms.h  get_next_line.h  libft.h
libft/src/from_ms/: ft_stod.c
rt/: sample.rt
rt/exceptions/: only_window.rt  resolution_zero.rt  too_fat_file.rt
rt/scenes/: sample.rt  set1.rt
rt/subjects/: plane.rt
src/: adapter.c  adapter_hittable.c  adapter_rt.c  close.c  hook_key.c  main.c  mlx_util.c  multithread.c  new.c  singleton.c  utils.c
src/aabb/: aabb.c
src/addend/: add_addend_objects.c  adjust_objects.c  camera_orientation.c  camera_position.c  utils.c
src/args/: args_check.c  check_mode.c  error.c  print_err.c  single_mode.c
src/camera/: camera.c  camera_setup.c  movement.c  trace.c
src/color/: color_util.c
src/error/: error.c  error1.c  print_err.c  varify_indentifier.c
src/ft_dotrt/: as_ambient.c  as_camera.c  as_cylinder.c  as_light.c  as_plane.c  as_sphere.c  debug_print.c  debug_print_obj.c  debug_print_rt.c  ft_readrt.c  ft_readrt_utils.c  ft_writert.c  is_format.c  single_rt.c  tuple.c  util.c
src/ft_readrt/: ft_readrt.c
src/hittable/: cylinder.c  hit_record.c  init_objects.c  material.c  obj.c  plane.c  rectangle.c  rotate.c  rotate_obj.c  sphere.c  texture.c  translate.c
src/interval/: interval.c  interval_oprt.c
src/ray/: ray.c
src/vaild/: v1.c
src/valid/: check_input.c  error.c
src/vector/: vector.c  vector_oprt1.c  vector_oprt2.c  vector_oprt3.c  vector_util.c
